# DeepSearchAgent-Demo

./: .gitignore  README.md  config.py.example  myconfig.py.example  pyproject.toml
examples/: advanced_usage.py
src/: agent.py
src/llms/: __init__.py  base.py  llm.py
src/nodes/: formatting_node.py  search_node.py  summary_node.py
src/state/: state.py
src/utils/: config.py
