[project]
name = "deepsearchagent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "rich>=13.0.0",
    "streamlit>=1.28.0",
    "tavily-python>=0.3.0",
]
